fixed header and hero

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <body>
-
+    <div class="header2">
     <header>
         <div class="header">
             <div class="header-title"><h1>Bay Bui</h1></div>
@@ -24,7 +24,7 @@
             </div>
         </div>
     </header>
-
+    </div>
         <section class="hero">
             <div class="hero-div"><h2 id="port-content">Portfolio Content</h2></div>
         </section>
@@ -67,7 +67,7 @@
                         <h2>Perfect Cocktail</h2>
                         <h3>Javascript, API</h3>
                     </div>
-                    <a target="_blank" href="https://unity7.github.io/cocktail/index.html"><img src="./assets/cocktail.jpg" alt="cocktail"></a>
+                    <a target="_blank" href="https://unity7.github.io/cocktail/"><img src="./assets/cocktail.jpg" alt="cocktail"></a>
                 </div>
                 <div class='work-content' id="run-buddy">
                     <div class="work-label">
