updated chirp app

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="about-section-content">
           <div id="bay"><img src="./assets/bay.jfif" /></div>
           <div id="baytext">
-            My name is Bay Bui. I graduated from the Unviersity of California,
+            My name is Bay Bui. I graduated from the University of California,
             Los Angeles. I am a full-stack web developer that can easily adapt
             to new technologies. I am a highly motivated, ambitious, and
             detail-oriented individual who is dedicated to continual growth and
@@ -85,7 +85,15 @@
                 alt="Logo for Extra-vert website"
             /></a>
           </div>
-
+          <div class="work-content" id="chirp">
+            <div class="work-label">
+              <h2>Chirp</h2>
+              <h3>HTML, Javascript, Materialize, NodeJS</h3>
+            </div>
+            <a target="_blank" href="https://chirp-uclabootcamp.herokuapp.com/"
+              ><img src="./assets/chirp.png" alt="Logo for Chirp website"
+            /></a>
+          </div>
           <div class="work-content" id="charts">
             <div class="work-label">
               <h2>Data Visualization - Coming Soon</h2>
